fixed contrast error

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,9 +26,6 @@ body {
   margin: 0;
   font-family: var(--paragraph-font);
 }
-.starry-background{
-  width: 50%;
-}
 .logo{
   width: 80px;
 }
@@ -58,23 +55,22 @@ nav a:hover {
   width: 100%;
   overflow: hidden;
 }
-
 #hero-box {
   position: relative;
 }
-
 #hero-img {
   width: 100%;
   display: block;
 }
-
 #hero-title {
   position: absolute;
-  top: 40%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   color: var(--accent2-color);
+  background: rgba(0,0,0,0.5);
+
 }
 .home-title {
   font-size: 8em;
